# TapeDeck

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  LPlayer.ui  Main.lua  MoonPlayer.ui  README.md  build.nims  build.ninja  com.github.Miqueas.TapeDeck.json  config.json  config.yaml  io.github.Miqueas.TapeDeck.yml  main.lua  main3.lua  meson.build
.github/workflows/: flatpak.yml  windows.yml
.gitpod/: Dockerfile
Data/: Resources.xml  Styles.css  com.github.Miqueas.Moonplayer.gschema.xml
Source/: App.lua  Controls.lua  Database.lua  Header.lua  HeaderTitle.lua  Info.lua  LibraryView.lua  LocalItem.lua  Player.lua  Window.lua
Templates/: Controls.ui  Header.ui  HeaderTitle.ui  Info.ui  LibraryView.ui  LocalItem.ui  Window.ui
data/: Resources.xml  io.github.Miqueas.TapeDeck.gresources.xml  meson.build  style.css
data/ui/: AppWindow.ui  Controls.ui  Header.ui  MoonPlayer.ui  Sidebar.ui  SidebarItem.ui  Title.ui  TrackInfo.ui  app-window.blp
flatpak/: com.github.Miqueas.TapeDeck.yml
i18n/: en.lua  es.lua
libs/: conf.lua  log.lua  text.lua  utils.lua
po/: meson.build
src/: App.vala  AppWindow.vala  Controls.vala  Header.vala  Player.vala  Resources.xml  Sidebar.vala  SidebarItem.vala  Title.vala  TrackInfo.vala  ViewItem.vala  app-window.vala  app.nim  app.vala  io.github.Miqueas.TapeDeck.gresource.xml  meson.build  nim.cfg  track-info.vala
src/ui/: AppWindow.ui  Controls.ui  Header.ui  Title.ui  ViewItem.ui
src/vapi/: mpd.vapi
subprojects/: libadwaita-git.wrap  libadwaita.wrap  libmpdclient-git.wrap  libmpdclient.wrap
